# rust_protosym

./: .gitignore  Cargo.toml  pyproject.toml
rust_protosym/: __init__.py
src/: lib.rs
