[package]
name = "rust-protosym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_protosym"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
internment = { version = "0.7.0", features = ["arc"] }
fnv = "1.0.7"
